# library_api

./: Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
apps/authors/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/authors/migrations/: 0001_initial.py
apps/books/: apps.py  filters.py  models.py  serializers.py  tasks.py  test_task.py  tests.py  urls.py  views.py
apps/books/migrations/: 0001_initial.py
apps/favorites/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/favorites/migrations/: 0001_initial.py  0002_initial.py
apps/users/: serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
